# cartographer_ros

./: .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.base.melodic  Dockerfile.dashing  Dockerfile.foxy  Dockerfile.indigo  Dockerfile.kinetic  Dockerfile.lunar  Dockerfile.melodic  Dockerfile.noetic  README.md  README.rst  azure-pipelines.yml  cartographer_ros.rosinstall  jenkins-slave  video.webm
cartographer_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
cartographer_ros/cartographer_ros/: CMakeLists.txt  assets_writer.cc  assets_writer.h  assets_writer_main.cc  bag_reader.cc  bag_reader.h  color.cc  color.h  color_manager.cc  color_manager.h  configuration_files_test.cc  frame_id_filtering_points_processor.cc  frame_id_filtering_points_processor.h  map_builder_bridge.cc  map_builder_bridge.h  map_options.cc  map_options.h  map_writer.cc  msg_conversion.cc  msg_conversion.h  msg_conversion_test.cc  node.cc  node.h  node_constants.cc  node_constants.h  node_main.cc  node_options.cc  node_options.h  occupancy_grid.cc  occupancy_grid.h  occupancy_grid_exporter.cc  occupancy_grid_node_main.cc  occupancy_grid_test.cc  offline_node.cc  offline_node.h  offline_node_main.cc  pbstream_map_publisher_main.cc  pbstream_to_ros_map_main.cc  pcd.cc  pcd.h  (+38 more)
cartographer_ros/cartographer_ros/cartographer_grpc/: node_grpc_main.cc  offline_node_grpc_main.cc
cartographer_ros/cartographer_ros/dev/: pbstream_trajectories_to_rosbag_main.cc  rosbag_publisher_main.cc  (+1 more)
cartographer_ros/configuration_files/: assets_writer.lua  assets_writer_backpack_2d.lua  assets_writer_backpack_2d_ci.lua  assets_writer_backpack_3d.lua  assets_writer_ros_map.lua  assets_writer_rover.lua  assets_writrer_tof_vlp16_rover.lua  backpack_2d.lua  backpack_2d_initial_pose.lua  backpack_2d_localization.lua  backpack_2d_localization_evaluation.lua  backpack_2d_localization_no_odom.lua  backpack_2d_server.lua  backpack_2d_server_cloud.lua  backpack_3d.lua  backpack_3d_localization.lua  demo_2d.rviz  demo_3d.rviz  demo_turtlebot.rviz  golfcart.lua  golfcart_2d.lua  initial_trajectory_pose.lua  mir-100-mapping.lua  navigation.rviz  pr2.lua  revo_lds.lua  taurob_tracker.lua  transform.lua  turtlebot.lua  visualize_pbstream.lua
cartographer_ros/launch/: 3d_mapping.launch  amcl.launch  assets_writer_backpack_2d.launch  assets_writer_backpack_2d.launch.py  assets_writer_backpack_2d_ci.launch  assets_writer_backpack_3d.launch  assets_writer_backpack_3d.launch.py  assets_writer_ros_map.launch  assets_writer_ros_map.launch.py  assets_writer_rover_3d.launch  assets_writrer_tof_vlp16_rover.launch  backpack_2d.launch  backpack_2d.launch.py  backpack_3d.launch  backpack_3d.launch.py  demo_2d.launch  demo_3d.launch  demo_backpack_2d.launch  demo_backpack_2d.launch.py  demo_backpack_2d_localization.launch  demo_backpack_2d_localization.launch.py  demo_backpack_3d.launch  demo_backpack_3d.launch.py  demo_backpack_3d_localization.launch  demo_backpack_3d_localization.launch.py  demo_pr2.launch  demo_revo_lds.launch  demo_revo_lds.launch.py  demo_taurob_tracker.launch  demo_taurob_tracker.launch.py  demo_turtlebot.launch  eval_localization_comparison.launch  eval_localization_offline.launch  eval_pure_localization.launch  golfcart.launch  golfcart_2d.launch  grpc_demo_backpack_2d.launch  grpc_demo_backpack_2d_localization.launch  mapping_2d.launch  minimal_test.launch  (+16 more)
cartographer_ros/param/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
cartographer_ros/scripts/: cartographer_grpc_server.sh  imu_pub.py  remove_leading_slashes.py  submap_origins_to_marker.py  submap_pose_publisher.py  submap_visualization.py  tf_remove_frames.py
cartographer_ros/src/: cartographer_node_main.cc  drawable_submap.cc  drawable_submap.h  map_builder_bridge.cpp  map_writer.cc  map_writer.h  msg_conversion.cc  msg_conversion.cpp  msg_conversion.h  msg_conversion_test.cpp  node_constants.h  node_main.cpp  node_options.cc  node_options.cpp  node_options.h  occupancy_grid.cc  occupancy_grid.h  occupancy_grid_node_main.cpp  offline_node.cpp  offline_node_main.cpp  ros_log_sink.cc  ros_log_sink.h  ros_map.cpp  sensor_bridge.cc  sensor_bridge.cpp  sensor_bridge.h  sensor_data.cc  sensor_data.h  sensor_data_producer.cc  sensor_data_producer.h  submap.cpp  submaps_display.cc  submaps_display.h  tf_bridge.cc  tf_bridge.cpp  tf_bridge.h  time_conversion_test.cpp  trajectory_options.cpp
cartographer_ros/tests/: backpack_2d.test  offline_backpack_2d.test
cartographer_ros/urdf/: backpack_2d.urdf  backpack_2d_ori.urdf  backpack_3d.urdf  dss_dual_vlp16_rover.urdf  golfcart.urdf  mir-100.urdf  tof_vlp16_rover.urdf  turtlebot.urdf
cartographer_ros_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cartographer_ros_msgs/msg/: BagfileProgress.msg  ConstraintVisualization.msg  InitialTrajectoryPose.msg  LandmarkEntry.msg  LandmarkList.msg  SensorTopics.msg  StatusCode.msg  StatusResponse.msg  SubmapEntry.msg  SubmapList.msg  SubmapTexture.msg  TrajectoryOptions.msg  TrajectoryStates.msg
cartographer_ros_msgs/srv/: CollectMetrics.srv  DeleteTrajectory.srv  FinishTrajectory.srv  GetTrajectoryStates.srv  LoadStateFromFile.srv  ReadMetrics.srv  StartTrajectory.srv  SubmapQuery.srv  TrajectoryOptionsQuery.srv  TrajectoryQuery.srv  WriteAssets.srv  WriteState.srv
cartographer_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz_plugin_description.xml
cartographer_rviz/cartographer_rviz/: CMakeLists.txt  drawable_submap.cc  drawable_submap.h  msg_conversion.cc  ogre_slice.cc  ogre_slice.h  ogre_submap.cc  ogre_submap.h  per_trajectory_submap_display.cc  per_trajectory_submap_display.h  rviz_plugin_description.xml  submap.cc  submap.h  submaps_display.cc  submaps_display.h  time_conversion.cc  time_conversion.h
cartographer_rviz/src/: drawable_submap.cc  drawable_submap.cpp  drawable_submap.h  ogre_slice.cpp  submaps_display.cc  submaps_display.cpp  submaps_display.h
ceres_solver/: CMakeLists.txt  package.xml
(+89 files in other folders)
